--- a/index.html
+++ b/index.html
@@ -111,15 +111,15 @@
               characteristics, traits, personal choices and the overall
               personality of the person.
             </p>
-            <ul class="services-sub-list">
-              <li class="services-sub-item">
+            <ul class="management-sub-list">
+              <li class="management-sub-item">
                 <h4 class="services-extrasubtitle">Accessory makers</h4>
                 <p class="services-list-text">
                   While most people enjoy casino gambling, sports betting,
                   lottery and bingo playing for the fun
                 </p>
               </li>
-              <li class="services-sub-item">
+              <li class="management-sub-item">
                 <h4 class="services-extrasubtitle">Alterationists</h4>
                 <p class="services-list-text">
                   If you are looking for a new way to promote your business that
@@ -155,16 +155,30 @@
             </p>
             <ul class="services-sub-list">
               <li class="services-sub-item">
-             
+                <div class="support-icon-container">
+                  <svg class="support-icon" width="17" height="12">
+                    <use href="./images/iconsnew.svg#icon-tick"></use>
+                  </svg>
+                  </div>
                 <p class="services-list-text support-list-text">Never worry about overpaying for your energy again.</p>
               </li>
               <li class="services-sub-item">
+                <div class="support-icon-container">
+                <svg class="support-icon" width="17" height="12">
+                  <use href="./images/iconsnew.svg#icon-tick"></use>
+                </svg>
+                </div>
                 <p class="services-list-text support-list-text">
                   We will only switch you to energy companies that we trust and
                   will treat you right
                 </p>
               </li>
               <li class="services-sub-item">
+                <div class="support-icon-container">
+                  <svg class="support-icon" width="17" height="12">
+                    <use href="./images/iconsnew.svg#icon-tick"></use>
+                  </svg>
+                  </div>
                 <p class="services-list-text support-list-text">
                   We track the markets daily and know where the savings are.
                 </p>
@@ -182,15 +196,15 @@
               the past three decades, women still face a double standard when it
               comes to their behavior.
             </p>
-            <ul class="services-sub-list">
-              <li class="services-sub-item">
+            <ul class="collab-sub-list">
+              <li class="collab-sub-item">
                 <h4 class="services-extrasubtitle">Accessory makers</h4>
                 <p class="services-list-text">
                   While most people enjoy casino gambling, sports betting,
                   lottery and bingo playing for the fun
                 </p>
               </li>
-              <li class="services-sub-item">
+              <li class="collab-sub-item">
                 <h4 class="services-extrasubtitle">Alterationists</h4>
                 <p class="services-list-text">
                   If you are looking for a new way to promote your business that
@@ -272,8 +286,10 @@
               height="185"
               class="strateg-img"
             />
+            <div class="strateg-minicontainer">
             <p class="strateg-descr">By <span class="strateg-name">Wahid Ari</span> | 03 March 2019</p>
             <h4 class="strateg-subtitle">Increasing Prosperity With Positive Thinking</h4>
+          </div>
           </li>
           <li class="strateg-item">
             <img 
@@ -283,8 +299,10 @@
             height="185"
             class="strateg-img" 
             />
+            <div class="strateg-minicontainer">
             <p class="strateg-descr">By <span class="strateg-name">Wahid</span> Ari | 03 March 2019</p>
             <h4 class="strateg-subtitle">Motivation Is The First Step To Success</h4>
+          </div>
           </li>
           <li class="strateg-item">
             <img 
@@ -294,8 +312,10 @@
             height="185"
             class="strateg-img" 
             />
+            <div class="strateg-minicontainer">
             <p class="strateg-descr">By <span class="strateg-name">Wahid Ari</span> | 03 March 2019</p>
             <h4 class="strateg-subtitle">Success Steps For Your Personal Or Business</h4>
+            </div>
           </li>
         </ul>
       </div>
@@ -311,40 +331,79 @@
           <li class="price-item">
             <h4 class="price-subtitle">Free</h4>
             <p class="price-descr">Brief price description</p>
-            
-              <div class="price-value">
-                <span class="amount">0</span><span class="currency">$</span>
-                <span class="per-month">per/month</span>
-              </div>
 
-              <ul class="price-card-list">
-              <li class="price-card-item">Only 2 Operators</li>
-              <li class="price-card-item">Notifications</li>
-              <li class="price-card-item">Landing Pages</li>
+            <ul class="price-card-list">
+              <li class="price-card-item">
+              <div class="price-value">
+                <p class="amount">0</p>
+                <div class="currency-perm">
+                <p class="currency">$</p>
+                <p class="per-month">per/month</p>
+              </div>
+            </div>
+          </li>
+              <li class="price-card-item">
+                <p class="price-card-text">Only 2 Operators</p>
+                </li>
+              <li class="price-card-item">
+                <p class="price-card-text">Notifications</p>
+                </li>
+              <li class="price-card-item">
+                <p class="price-card-text">Landing Pages</p>
+                </li>
             </ul>
             <button class="price-card-btn" type="button">Order Now</button>
           </li>
 
           <li class="price-item">
-            <h4 class="price-subtitle">Standard</h4>
-            <p class="price-descr">Brief price description</p>
+            <h4 class="price-subtitle price-subtitle-color">Standard</h4>
+            <p class="price-descr price-descr-color">Brief price description</p>
             <ul class="price-card-list">
-              <li class="price-card-item"><span class="price-span">5 $ per/month</span></li>
-              <li class="price-card-item">5+ Operators</li>
-              <li class="price-card-item">Notifications</li>
-              <li class="price-card-item">Landing Pages</li>
+
+              <li class="price-card-item">
+                <div class="price-value">
+                <p class="amount amount-color">5</p>
+                <div class="currency-perm">
+                 <p class="currency currency-color">$</p> 
+                 <p class="per-month per-month-color">per/month</p>
+              </div>
+              </div>
+              </li>
+              <li class="price-card-item">
+              <p class="price-card-text price-card-text-color">5+ Operators</p>
+            </li>
+              <li class="price-card-item">
+                <p class="price-card-text price-card-text-color">Notifications</p>
+                </li>
+              <li class="price-card-item">
+                <p class="price-card-text price-card-text-color">Landing Pages</p>
+                </li>
             </ul>
-            <button class="price-card-btn" type="button">Order Now</button>
+            <button class="price-card-btn price-card-btn-color" type="button">Order Now</button>
           </li>
 
           <li class="price-item">
             <h4 class="price-subtitle">Premium</h4>
             <p class="price-descr">Brief price description</p>
             <ul class="price-card-list">
-              <li class="price-card-item"><span class="price-span">10 $ per/month</span></li>
-              <li class="price-card-item">10+ Operators</li>
-              <li class="price-card-item">Notifications</li>
-              <li class="price-card-item">Landing Pages</li>
+              <li class="price-card-item">
+                <div class="price-value">
+                <p class="amount">10</p>
+                <div class="currency-perm">
+                 <p class="currency">$</p>
+                 <p class="per-month">per/month</p>
+              </div>
+            </div>
+          </li>
+              <li class="price-card-item">
+                <p class="price-card-text">10+ Operators</p>
+                </li>
+              <li class="price-card-item">
+                <p class="price-card-text">Notifications</p>
+                </li>
+              <li class="price-card-item">
+                <p class="price-card-text">Landing Pages</p>
+                </li>
             </ul>
             <button class="price-card-btn" type="button">Order Now</button>
           </li>
@@ -483,18 +542,32 @@
     <div class="footer-part-two">
       <h4 class="subtitle-footer">Resource</h4>
       <ul class="footer-resource-list">
-        <li class="footer-resource-item">About Us</li>
-        <li class="footer-resource-item">Blog</li>
-        <li class="footer-resource-item">Contact</li>
-        <li class="footer-resource-item">FAQ</li>
+        <li class="footer-resource-item">
+          <a class="footer-resource-link" href="">About Us</a>
+          </li>
+        <li class="footer-resource-item">
+          <a class="footer-resource-link" href="">Blog</a>
+          </li>
+        <li class="footer-resource-item">
+          <a class="footer-resource-link" href="">Contact</a>
+          </li>
+        <li class="footer-resource-item">
+          <a class="footer-resource-link" href="">FAQ</a>
+          </li>
       </ul>
     </div>
     <div class="legal-stuff">
       <h4 class="subtitle-footer">Legal Stuff</h4>
       <ul class="footer-legal-list">
-        <li class="footer-legal-item">Disclaimer</li>
-        <li class="footer-legal-item">Financing</li>
-        <li class="footer-legal-item">Privacy Policy</li>
+        <li class="footer-legal-item">
+          <a class="footer-legal-link" href="">Disclaimer</a>
+          </li>
+        <li class="footer-legal-item">
+          <a class="footer-legal-link" href="">Financing</a>
+          </li>
+        <li class="footer-legal-item">
+          <a class="footer-legal-link" href="">Privacy Policy</a>
+          </li>
       </ul>
     </div>
 
